# accCouchDB

./: README.md  building.txt
WinLibraries/: libcurl.lib  pillowtalk.exp  pillowtalk.lib  yajl.lib
src/: AccCouchDB.cpp  AccCouchDB.exp  AccCouchDB.h  CMakeLists.txt  WinAccCouchDB.lib
